syntax = "proto3";

package agent;

message HelloRequest {
    uint32 major = 1;
    uint32 minor = 2;
}

message HelloReply {
    uint32 major = 1;
    uint32 minor = 2;

    string session = 3;
}

message Address {
    string network = 1;
    string address = 2;
}

//metadata: session
message ConnectRequest {
    Address remote = 1;
}

message ConnectReply {
    string channel = 1;
    Address bound = 2;
}

//metadata: session, channel
message DataPacket {
    uint32 No = 1;      //packet sn

    bytes buf = 2;

    repeated uint32 acks = 4;         //packets sn
}

//metadata: session
message Ping {
    string appData = 1;
}

message Pong {
    string appData = 1;
}

service Agent {
    rpc Hello(HelloRequest) returns (HelloReply) {}
    rpc Connect(ConnectRequest) returns (ConnectReply) {}
    rpc Exchange(stream DataPacket) returns (stream DataPacket) {}
    rpc Heartbeat(Ping) returns (Pong) {}
}
